# obsidian.esp

obsidian_esp/: .gitignore  AGENTs.md  ARCHITECTURE.md  Cargo.toml  README.md  Todo.md  build-and-package.bat  build_error.txt  canvas_editing.md  canvas_editing_internals.md  canvas_generation_framework.md  md_dialogue_spec.md  package-lock.json
obsidian_esp/.agents/skills/tes3-plugin-dev/: SKILL.md
obsidian_esp/.claude/: launch.json
obsidian_esp/.claude/skills/obsidian-bases/: SKILL.md
obsidian_esp/obsidian_plugin/: LICENSE  README.md  build-and-package.bat  esbuild.config.mjs  eslint.config.mts  package.json  styles.css  worker.js
obsidian_esp/obsidian_plugin/src/: main.ts  settings.ts
obsidian_esp/obsidian_plugin/tests/: frontmatter-ids.test.mjs  header-parser.test.mjs  quest-canvas-add-topic.test.mjs  quest-canvas-conditions.test.mjs  quest-canvas-results.test.mjs
obsidian_esp/scripts/: check_fields.rs  patch-wasm-loader.cjs
obsidian_esp/scripts/canvas-harness/: actions-test-entry.mjs  actions-test.mjs  cards-test-entry.mjs  cards-test.mjs  compare-edges.mjs  harness-entry.mjs  index.html  metrics.mjs  migrate-entry.mjs  migrate.mjs  obsidian-stub.mjs  render-svg.mjs  run.mjs  serve.mjs  sync-test-entry.mjs  sync-test.mjs
obsidian_esp/src/: export.rs  lib.rs  logging.rs  main.rs
obsidian_esp/src/compile/: mod.rs  resolve.rs  validate.rs
obsidian_esp/src/parse/: frontmatter.rs  header.rs  info.rs  mod.rs
obsidian_esp/tests/: integration_tests.rs
obsidian_esp/tmp/: eerie-generated.canvas
obsidian_md/: .gitignore  AGENTs.md  Cargo.toml  md_dialogue_spec.md
obsidian_md/examples/: output.esp
obsidian_md/examples/JSON_REFERENCE/: obsidianDialogueTest.JSON
obsidian_md/examples/obsidianDialogueTest/: header.md
obsidian_md/src/: export.rs  lib.rs  logging.rs  main.rs
obsidian_md/src/compile/: mod.rs  resolve.rs
obsidian_md/src/parse/: frontmatter.rs  header.rs  info.rs  mod.rs
obsidian_md/tests/: integration_tests.rs
(+1006 files in other folders)
